styled and added classes to buttons & fixed anual plan alignment

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 /* Styles for Order Summary Card */
 .sub-card{
     overflow: hidden;
-    border-radius: 1rem;
+    border-radius: 1.5rem;
     margin: 1rem;
     background-color: white;
 }
@@ -52,6 +52,10 @@ body{
     padding: 1rem;
     border-radius: 0.75rem;
 }
+.sub-card__plan span{
+    padding-right: 3rem;
+}
+
 .sub-card__plan span p:nth-of-type(1){
     font-weight: 900;
     color: var(--color-darkBlue);
@@ -60,4 +64,28 @@ body{
 .sub-card__plan span p:nth-of-type(2){
     font-weight: 500;
     color: var(--color-desaturatedBlue);
+}
+.sub-card__buttons{
+    display: flex;
+    flex-wrap: wrap;
+    min-width: 100%;
+
+    gap: 0.5rem
+}
+.order-button{
+    min-width: 100%;
+    border:none;
+    padding: 1rem;
+    border-radius: 0.75rem;
+
+    font-weight: 900;
+
+    background-color: rgba(255, 255, 255, 0);
+    color: var(--color-desaturatedBlue);
+}
+
+.submit{
+    color: white;
+    background-color: var(--color-brightBlue);
+    box-shadow: 0 0.75rem 0.75rem var(--color-paleBlue);
 }
